# DawDreamer

./: .buildinfo  .clang-format  .codespellignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CITATION.cff  CLAUDE.md  DEVELOPER.md  DawDreamer.jucer  Dockerfile  LICENSE  MANIFEST.in  PICKLE_FORMAT.md  README.md  before_linux_build.sh  build_linux.sh  build_macos.sh  compatibility.html  dawdreamer.html  env.bat  examples.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  release_notes.html  requirements.txt  search.html  searchindex.js  setup.py  test-requirements.txt
Builds/: .gitignore
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h  include_juce_audio_processors_ara.cpp  include_juce_audio_processors_lv2_libs.cpp
Source/: AbletonClipInfo.h  AddProcessor.h  AllProcessors.h  CompressorProcessor.h  CustomParameters.cpp  CustomParameters.h  DelayProcessor.h  FaustArgvBuilder.h  FaustBoxAPI.cpp  FaustBoxAPI.h  FaustProcessor.cpp  FaustProcessor.h  FaustSignalAPI.cpp  FaustSignalAPI.h  FilterProcessor.cpp  FilterProcessor.h  MidiSerialization.h  OscillatorProcessor.h  PannerProcessor.h  PickleVersion.h  PlaybackProcessor.h  PlaybackWarpProcessor.cpp  PlaybackWarpProcessor.h  PluginProcessor.cpp  PluginProcessor.h  ProcessorBase.cpp  ProcessorBase.h  RecorderProcessor.h  RenderEngine.cpp  RenderEngine.h  RenderEngine.h.backup  RenderEngineWrapper.cpp  RenderEngineWrapper.h  ReverbProcessor.h  SamplerProcessor.h  StandalonePluginWindow.h  custom_nanobind_wrappers.cpp  custom_nanobind_wrappers.h  custom_pybind_wrappers.cpp  custom_pybind_wrappers.h  (+1 more)
VST3_SDK/: README.md
_generate/: dawdreamer.AddProcessor.html  dawdreamer.CompressorProcessor.html  dawdreamer.DelayProcessor.html  (+13 more)
(+759 files in other folders)
